--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4.2.2
     # - name: SwiftLint
     #   uses: norio-nomura/action-swiftlint@3.2.1
 
@@ -19,15 +19,28 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-        
-      - name: Set Xcode Version
-        uses: maxim-lobanov/setup-xcode@v1
+        uses: actions/checkout@v4.2.2
+
+      - name: Xcode
+        uses: maxim-lobanov/setup-xcode@v1.6.0
         with:
           xcode-version: latest-stable
-          
-      - name: Build And Test
-        uses: sersoft-gmbh/xcodebuild-action@v3
+
+      # - name: Information
+      #   run: |
+      #     echo "Mac OS Version"
+      #     sw_vers -productVersion
+      #     printf "\nXcode Version"
+      #     xcodebuild -version
+      #     printf "\nSDKs"
+      #     xcodebuild -showsdks
+      #     printf "\nRuntimes and iOS Simulators"
+      #     xcrun simctl list runtimes devices iOS
+      #     printf "\n Download Platform"
+      #     xcodebuild -downloadPlatform iOS
+
+      - name: Test
+        uses: sersoft-gmbh/xcodebuild-action@v3.2.0
         with:
           project: YVLearning.xcodeproj
           scheme: YVLearning
